Font not showing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -290,8 +290,9 @@ a.read_more2:hover {
     border: 1px solid #fff;
 }
 .project_title{
-
+    color: #222222;
     font-size: 25px;
+    margin: 0 0 5px 0;
     text-align: center;
 }
 
